# neo

./: .gitignore  README.md  main.py  pyproject.toml  testing.py
app/: file_utils.py
app/chat/: errors.py  generation.py  schemas.py
app/common/: chats.py  config.py  errors.py  file_utils.py  generation.py  jobs.py  literals.py  prompts.py  schemas.py  types.py
app/data/: errors.py  generation.py  schemas.py
app/followups/: errors.py  literals.py  prompts.py  schemas.py  strings.py
app/queries/: errors.py  generation.py  prompts.py  schemas.py
app/responses/: errors.py  generation.py  schemas.py
