[project]
name = "neo"
version = "0.1.0"
description = "Synthetic data generation for the home"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.135.3",
    "mypy>=1.20.0",
    "openai>=2.31.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "rich>=14.3.3",
    "uvicorn>=0.44.0",
]

[tool.mypy]
strict = true
