[project]
name = "neo"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.135.3",
    "mypy==1.20.0",
    "openai>=2.32.0",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "rich>=15.0.0",
    "uvicorn>=0.44.0",
]

[tool.mypy]
strict = true
